fixed navbar spacing on phone size

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -102,7 +102,7 @@
           transition: 0.2s ease;
 
           @include respond(phone) {
-            margin: 0.5rem;
+            margin: 0.3rem;
           }
         }
 
