--- a/sass/main.css
+++ b/sass/main.css
@@ -2253,7 +2253,7 @@ body {
 }
 @media only screen and (max-width: 500px) {
   .header__navbar ul li a {
-    margin: 0.5rem;
+    margin: 0.3rem;
   }
 }
 .header__navbar ul li:hover a, .header__navbar ul li:focus a {
